--- a/ingress-resources.yaml
+++ b/ingress-resources.yaml
@@ -65,3 +65,26 @@ spec:
     - services:
         - name: acc-ui-server
           port: 80
+
+---
+apiVersion: projectcontour.io/v1
+kind: HTTPProxy
+metadata:
+  annotations:
+    projectcontour.io/ingress.class: contour-external
+  labels:
+    projectcontour.io/ingress.class: contour-external
+  name: api-portal-external
+  namespace: tap-install
+spec:
+  routes:
+  - conditions:
+    - prefix: /
+    services:
+    - name: api-portal-server
+      port: 8080
+  virtualhost:
+    fqdn: #@ "api-portal.{}".format(data.values.domain)
+    tls:
+      secretName: #@ "{}/{}".format(data.values.tls.namespace,data.values.tls.secretName)
+
